@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,9 +12,9 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
- *
+ *  limitations under the License.
  */
+
 package org.apache.bcel.classfile;
 
 import java.io.ByteArrayInputStream;
@@ -32,30 +33,32 @@ import java.util.List;
 import java.util.Locale;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.GZIPOutputStream;
-import org.apache.bcel.Constants;
+
+import org.apache.bcel.Const;
 import org.apache.bcel.util.ByteSequence;
 
 /**
  * Utility functions that do not really belong to any class in particular.
  *
- * @version $Id: Utility.java 386056 2006-03-15 11:31:56Z tcurdt $
- * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
+ * @version $Id: Utility.java 1808131 2017-09-12 16:36:55Z britter $
  */
+// @since 6.0 methods are no longer final
 public abstract class Utility {
 
-    private static int unwrap( ThreadLocal tl ) {
-        return ((Integer) tl.get()).intValue();
+    private static int unwrap( final ThreadLocal<Integer> tl ) {
+        return tl.get().intValue();
     }
 
 
-    private static void wrap( ThreadLocal tl, int value ) {
-        tl.set(new Integer(value));
+    private static void wrap( final ThreadLocal<Integer> tl, final int value ) {
+        tl.set(Integer.valueOf(value));
     }
 
-    private static ThreadLocal consumed_chars = new ThreadLocal() {
+    private static ThreadLocal<Integer> consumed_chars = new ThreadLocal<Integer>() {
 
-        protected Object initialValue() {
-            return new Integer(0);
+        @Override
+        protected Integer initialValue() {
+            return Integer.valueOf(0);
         }
     };/* How many chars have been consumed
      * during parsing in signatureToString().
@@ -79,7 +82,7 @@ public abstract class Utility {
      * @param  access_flags Access flags
      * @return String representation of flags
      */
-    public static final String accessToString( int access_flags ) {
+    public static String accessToString( final int access_flags ) {
         return accessToString(access_flags, false);
     }
 
@@ -90,16 +93,16 @@ public abstract class Utility {
      * Special case: Classes compiled with new compilers and with the
      * `ACC_SUPER' flag would be said to be "synchronized". This is
      * because SUN used the same value for the flags `ACC_SUPER' and
-     * `ACC_SYNCHRONIZED'. 
+     * `ACC_SYNCHRONIZED'.
      *
      * @param  access_flags Access flags
      * @param  for_class access flags are for class qualifiers ?
      * @return String representation of flags
      */
-    public static final String accessToString( int access_flags, boolean for_class ) {
-        StringBuffer buf = new StringBuffer();
+    public static String accessToString( final int access_flags, final boolean for_class ) {
+        final StringBuilder buf = new StringBuilder();
         int p = 0;
-        for (int i = 0; p < Constants.MAX_ACC_FLAG; i++) { // Loop through known flags
+        for (int i = 0; p < Const.MAX_ACC_FLAG; i++) { // Loop through known flags
             p = pow2(i);
             if ((access_flags & p) != 0) {
                 /* Special case: Classes compiled with new compilers and with the
@@ -107,10 +110,10 @@ public abstract class Utility {
                  * because SUN used the same value for the flags `ACC_SUPER' and
                  * `ACC_SYNCHRONIZED'.
                  */
-                if (for_class && ((p == Constants.ACC_SUPER) || (p == Constants.ACC_INTERFACE))) {
+                if (for_class && ((p == Const.ACC_SUPER) || (p == Const.ACC_INTERFACE))) {
                     continue;
                 }
-                buf.append(Constants.ACCESS_NAMES[i]).append(" ");
+                buf.append(Const.getAccessName(i)).append(" ");
             }
         }
         return buf.toString().trim();
@@ -118,15 +121,17 @@ public abstract class Utility {
 
 
     /**
+     * @param access_flags the class flags
+     *
      * @return "class" or "interface", depending on the ACC_INTERFACE flag
      */
-    public static final String classOrInterface( int access_flags ) {
-        return ((access_flags & Constants.ACC_INTERFACE) != 0) ? "interface" : "class";
+    public static String classOrInterface( final int access_flags ) {
+        return ((access_flags & Const.ACC_INTERFACE) != 0) ? "interface" : "class";
     }
 
 
     /**
-     * Disassemble a byte array of JVM byte codes starting from code line 
+     * Disassemble a byte array of JVM byte codes starting from code line
      * `index' and return the disassembled string representation. Decode only
      * `num' opcodes (including their operands), use -1 if you want to
      * decompile everything.
@@ -139,32 +144,27 @@ public abstract class Utility {
      * @param  verbose be verbose, e.g. print constant pool index
      * @return String representation of byte codes
      */
-    public static final String codeToString( byte[] code, ConstantPool constant_pool, int index,
-            int length, boolean verbose ) {
-        StringBuffer buf = new StringBuffer(code.length * 20); // Should be sufficient
-        ByteSequence stream = new ByteSequence(code);
-        try {
+    public static String codeToString( final byte[] code, final ConstantPool constant_pool, final int index,
+            final int length, final boolean verbose ) {
+        final StringBuilder buf = new StringBuilder(code.length * 20); // Should be sufficient // CHECKSTYLE IGNORE MagicNumber
+        try (ByteSequence stream = new ByteSequence(code)) {
             for (int i = 0; i < index; i++) {
                 codeToString(stream, constant_pool, verbose);
             }
             for (int i = 0; stream.available() > 0; i++) {
                 if ((length < 0) || (i < length)) {
-                    String indices = fillup(stream.getIndex() + ":", 6, true, ' ');
-                    buf.append(indices).append(codeToString(stream, constant_pool, verbose))
-                            .append('\n');
+                    final String indices = fillup(stream.getIndex() + ":", 6, true, ' ');
+                    buf.append(indices).append(codeToString(stream, constant_pool, verbose)).append('\n');
                 }
             }
-        } catch (IOException e) {
-            System.out.println(buf.toString());
-            e.printStackTrace();
-            throw new ClassFormatException("Byte code error: " + e);
+        } catch (final IOException e) {
+            throw new ClassFormatException("Byte code error: " + buf.toString(), e);
         }
         return buf.toString();
     }
 
 
-    public static final String codeToString( byte[] code, ConstantPool constant_pool, int index,
-            int length ) {
+    public static String codeToString( final byte[] code, final ConstantPool constant_pool, final int index, final int length ) {
         return codeToString(code, constant_pool, index, length, true);
     }
 
@@ -177,26 +177,35 @@ public abstract class Utility {
      * @param  constant_pool Array of constants
      * @param  verbose be verbose, e.g. print constant pool index
      * @return String representation of byte code
+     *
+     * @throws IOException if a failure from reading from the bytes argument occurs
      */
-    public static final String codeToString( ByteSequence bytes, ConstantPool constant_pool,
-            boolean verbose ) throws IOException {
-        short opcode = (short) bytes.readUnsignedByte();
-        int default_offset = 0, low, high, npairs;
-        int index, vindex, constant;
-        int[] match, jump_table;
-        int no_pad_bytes = 0, offset;
-        StringBuffer buf = new StringBuffer(Constants.OPCODE_NAMES[opcode]);
+    public static String codeToString( final ByteSequence bytes, final ConstantPool constant_pool,
+            final boolean verbose ) throws IOException {
+        final short opcode = (short) bytes.readUnsignedByte();
+        int default_offset = 0;
+        int low;
+        int high;
+        int npairs;
+        int index;
+        int vindex;
+        int constant;
+        int[] match;
+        int[] jump_table;
+        int no_pad_bytes = 0;
+        int offset;
+        final StringBuilder buf = new StringBuilder(Const.getOpcodeName(opcode));
         /* Special case: Skip (0-3) padding bytes, i.e., the
          * following bytes are 4-byte-aligned
          */
-        if ((opcode == Constants.TABLESWITCH) || (opcode == Constants.LOOKUPSWITCH)) {
-            int remainder = bytes.getIndex() % 4;
+        if ((opcode == Const.TABLESWITCH) || (opcode == Const.LOOKUPSWITCH)) {
+            final int remainder = bytes.getIndex() % 4;
             no_pad_bytes = (remainder == 0) ? 0 : 4 - remainder;
             for (int i = 0; i < no_pad_bytes; i++) {
                 byte b;
                 if ((b = bytes.readByte()) != 0) {
                     System.err.println("Warning: Padding byte != 0 in "
-                            + Constants.OPCODE_NAMES[opcode] + ":" + b);
+                            + Const.getOpcodeName(opcode) + ":" + b);
                 }
             }
             // Both cases have a field default_offset in common
@@ -205,7 +214,7 @@ public abstract class Utility {
         switch (opcode) {
             /* Table switch has variable length arguments.
              */
-            case Constants.TABLESWITCH:
+            case Const.TABLESWITCH:
                 low = bytes.readInt();
                 high = bytes.readInt();
                 offset = bytes.getIndex() - 12 - no_pad_bytes - 1;
@@ -224,7 +233,7 @@ public abstract class Utility {
                 break;
             /* Lookup switch has variable length arguments.
              */
-            case Constants.LOOKUPSWITCH: {
+            case Const.LOOKUPSWITCH: {
                 npairs = bytes.readInt();
                 offset = bytes.getIndex() - 8 - no_pad_bytes - 1;
                 match = new int[npairs];
@@ -246,45 +255,45 @@ public abstract class Utility {
             /* Two address bytes + offset from start of byte stream form the
              * jump target
              */
-            case Constants.GOTO:
-            case Constants.IFEQ:
-            case Constants.IFGE:
-            case Constants.IFGT:
-            case Constants.IFLE:
-            case Constants.IFLT:
-            case Constants.JSR:
-            case Constants.IFNE:
-            case Constants.IFNONNULL:
-            case Constants.IFNULL:
-            case Constants.IF_ACMPEQ:
-            case Constants.IF_ACMPNE:
-            case Constants.IF_ICMPEQ:
-            case Constants.IF_ICMPGE:
-            case Constants.IF_ICMPGT:
-            case Constants.IF_ICMPLE:
-            case Constants.IF_ICMPLT:
-            case Constants.IF_ICMPNE:
+            case Const.GOTO:
+            case Const.IFEQ:
+            case Const.IFGE:
+            case Const.IFGT:
+            case Const.IFLE:
+            case Const.IFLT:
+            case Const.JSR:
+            case Const.IFNE:
+            case Const.IFNONNULL:
+            case Const.IFNULL:
+            case Const.IF_ACMPEQ:
+            case Const.IF_ACMPNE:
+            case Const.IF_ICMPEQ:
+            case Const.IF_ICMPGE:
+            case Const.IF_ICMPGT:
+            case Const.IF_ICMPLE:
+            case Const.IF_ICMPLT:
+            case Const.IF_ICMPNE:
                 buf.append("\t\t#").append((bytes.getIndex() - 1) + bytes.readShort());
                 break;
             /* 32-bit wide jumps
              */
-            case Constants.GOTO_W:
-            case Constants.JSR_W:
-                buf.append("\t\t#").append(((bytes.getIndex() - 1) + bytes.readInt()));
+            case Const.GOTO_W:
+            case Const.JSR_W:
+                buf.append("\t\t#").append((bytes.getIndex() - 1) + bytes.readInt());
                 break;
             /* Index byte references local variable (register)
              */
-            case Constants.ALOAD:
-            case Constants.ASTORE:
-            case Constants.DLOAD:
-            case Constants.DSTORE:
-            case Constants.FLOAD:
-            case Constants.FSTORE:
-            case Constants.ILOAD:
-            case Constants.ISTORE:
-            case Constants.LLOAD:
-            case Constants.LSTORE:
-            case Constants.RET:
+            case Const.ALOAD:
+            case Const.ASTORE:
+            case Const.DLOAD:
+            case Const.DSTORE:
+            case Const.FLOAD:
+            case Const.FSTORE:
+            case Const.ILOAD:
+            case Const.ISTORE:
+            case Const.LLOAD:
+            case Const.LSTORE:
+            case Const.RET:
                 if (wide) {
                     vindex = bytes.readUnsignedShort();
                     wide = false; // Clear flag
@@ -298,94 +307,112 @@ public abstract class Utility {
              * following instruction. Relies on that the method is called again with
              * the following opcode.
              */
-            case Constants.WIDE:
+            case Const.WIDE:
                 wide = true;
                 buf.append("\t(wide)");
                 break;
             /* Array of basic type.
              */
-            case Constants.NEWARRAY:
-                buf.append("\t\t<").append(Constants.TYPE_NAMES[bytes.readByte()]).append(">");
+            case Const.NEWARRAY:
+                buf.append("\t\t<").append(Const.getTypeName(bytes.readByte())).append(">");
                 break;
             /* Access object/class fields.
              */
-            case Constants.GETFIELD:
-            case Constants.GETSTATIC:
-            case Constants.PUTFIELD:
-            case Constants.PUTSTATIC:
+            case Const.GETFIELD:
+            case Const.GETSTATIC:
+            case Const.PUTFIELD:
+            case Const.PUTSTATIC:
                 index = bytes.readUnsignedShort();
                 buf.append("\t\t").append(
-                        constant_pool.constantToString(index, Constants.CONSTANT_Fieldref)).append(
-                        (verbose ? " (" + index + ")" : ""));
+                        constant_pool.constantToString(index, Const.CONSTANT_Fieldref)).append(
+                        verbose ? " (" + index + ")" : "");
                 break;
             /* Operands are references to classes in constant pool
              */
-            case Constants.NEW:
-            case Constants.CHECKCAST:
+            case Const.NEW:
+            case Const.CHECKCAST:
                 buf.append("\t");
-            case Constants.INSTANCEOF:
+                //$FALL-THROUGH$
+            case Const.INSTANCEOF:
                 index = bytes.readUnsignedShort();
                 buf.append("\t<").append(
-                        constant_pool.constantToString(index, Constants.CONSTANT_Class))
-                        .append(">").append((verbose ? " (" + index + ")" : ""));
+                        constant_pool.constantToString(index, Const.CONSTANT_Class))
+                        .append(">").append(verbose ? " (" + index + ")" : "");
                 break;
             /* Operands are references to methods in constant pool
              */
-            case Constants.INVOKESPECIAL:
-            case Constants.INVOKESTATIC:
-            case Constants.INVOKEVIRTUAL:
+            case Const.INVOKESPECIAL:
+            case Const.INVOKESTATIC:
+                index = bytes.readUnsignedShort();
+                final Constant c = constant_pool.getConstant(index);
+                // With Java8 operand may be either a CONSTANT_Methodref
+                // or a CONSTANT_InterfaceMethodref.   (markro)
+                buf.append("\t").append(
+                        constant_pool.constantToString(index, c.getTag()))
+                        .append(verbose ? " (" + index + ")" : "");
+                break;
+            case Const.INVOKEVIRTUAL:
                 index = bytes.readUnsignedShort();
                 buf.append("\t").append(
-                        constant_pool.constantToString(index, Constants.CONSTANT_Methodref))
-                        .append((verbose ? " (" + index + ")" : ""));
+                        constant_pool.constantToString(index, Const.CONSTANT_Methodref))
+                        .append(verbose ? " (" + index + ")" : "");
                 break;
-            case Constants.INVOKEINTERFACE:
+            case Const.INVOKEINTERFACE:
                 index = bytes.readUnsignedShort();
-                int nargs = bytes.readUnsignedByte(); // historical, redundant
+                final int nargs = bytes.readUnsignedByte(); // historical, redundant
                 buf.append("\t").append(
                         constant_pool
-                                .constantToString(index, Constants.CONSTANT_InterfaceMethodref))
+                                .constantToString(index, Const.CONSTANT_InterfaceMethodref))
                         .append(verbose ? " (" + index + ")\t" : "").append(nargs).append("\t")
+                        .append(bytes.readUnsignedByte()); // Last byte is a reserved space
+                break;
+            case Const.INVOKEDYNAMIC:
+                index = bytes.readUnsignedShort();
+                buf.append("\t").append(
+                        constant_pool
+                                .constantToString(index, Const.CONSTANT_InvokeDynamic))
+                        .append(verbose ? " (" + index + ")\t" : "")
+                        .append(bytes.readUnsignedByte())  // Thrid byte is a reserved space
                         .append(bytes.readUnsignedByte()); // Last byte is a reserved space
                 break;
             /* Operands are references to items in constant pool
              */
-            case Constants.LDC_W:
-            case Constants.LDC2_W:
+            case Const.LDC_W:
+            case Const.LDC2_W:
                 index = bytes.readUnsignedShort();
                 buf.append("\t\t").append(
                         constant_pool.constantToString(index, constant_pool.getConstant(index)
-                                .getTag())).append((verbose ? " (" + index + ")" : ""));
+                                .getTag())).append(verbose ? " (" + index + ")" : "");
                 break;
-            case Constants.LDC:
+            case Const.LDC:
                 index = bytes.readUnsignedByte();
                 buf.append("\t\t").append(
                         constant_pool.constantToString(index, constant_pool.getConstant(index)
-                                .getTag())).append((verbose ? " (" + index + ")" : ""));
+                                .getTag())).append(verbose ? " (" + index + ")" : "");
                 break;
             /* Array of references.
              */
-            case Constants.ANEWARRAY:
+            case Const.ANEWARRAY:
                 index = bytes.readUnsignedShort();
                 buf.append("\t\t<").append(
                         compactClassName(constant_pool.getConstantString(index,
-                                Constants.CONSTANT_Class), false)).append(">").append(
-                        (verbose ? " (" + index + ")" : ""));
+                                Const.CONSTANT_Class), false)).append(">").append(
+                        verbose ? " (" + index + ")" : "");
                 break;
             /* Multidimensional array of references.
              */
-            case Constants.MULTIANEWARRAY: {
+            case Const.MULTIANEWARRAY: {
                 index = bytes.readUnsignedShort();
-                int dimensions = bytes.readUnsignedByte();
+                final int dimensions = bytes.readUnsignedByte();
                 buf.append("\t<").append(
                         compactClassName(constant_pool.getConstantString(index,
-                                Constants.CONSTANT_Class), false)).append(">\t").append(dimensions)
-                        .append((verbose ? " (" + index + ")" : ""));
+                                Const.CONSTANT_Class), false)).append(">\t").append(dimensions)
+                        .append(verbose ? " (" + index + ")" : "");
             }
                 break;
             /* Increment local variable.
              */
-            case Constants.IINC:
+            case Const.IINC:
                 if (wide) {
                     vindex = bytes.readUnsignedShort();
                     constant = bytes.readShort();
@@ -397,22 +424,21 @@ public abstract class Utility {
                 buf.append("\t\t%").append(vindex).append("\t").append(constant);
                 break;
             default:
-                if (Constants.NO_OF_OPERANDS[opcode] > 0) {
-                    for (int i = 0; i < Constants.TYPE_OF_OPERANDS[opcode].length; i++) {
+                if (Const.getNoOfOperands(opcode) > 0) {
+                    for (int i = 0; i < Const.getOperandTypeCount(opcode); i++) {
                         buf.append("\t\t");
-                        switch (Constants.TYPE_OF_OPERANDS[opcode][i]) {
-                            case Constants.T_BYTE:
+                        switch (Const.getOperandType(opcode, i)) {
+                            case Const.T_BYTE:
                                 buf.append(bytes.readByte());
                                 break;
-                            case Constants.T_SHORT:
+                            case Const.T_SHORT:
                                 buf.append(bytes.readShort());
                                 break;
-                            case Constants.T_INT:
+                            case Const.T_INT:
                                 buf.append(bytes.readInt());
                                 break;
                             default: // Never reached
-                                System.err.println("Unreachable default case reached!");
-                                System.exit(-1);
+                                throw new IllegalStateException("Unreachable default case reached!");
                         }
                     }
                 }
@@ -421,20 +447,20 @@ public abstract class Utility {
     }
 
 
-    public static final String codeToString( ByteSequence bytes, ConstantPool constant_pool )
+    public static String codeToString( final ByteSequence bytes, final ConstantPool constant_pool )
             throws IOException {
         return codeToString(bytes, constant_pool, true);
     }
 
 
     /**
-     * Shorten long class names, <em>java/lang/String</em> becomes 
+     * Shorten long class names, <em>java/lang/String</em> becomes
      * <em>String</em>.
      *
      * @param str The long class name
      * @return Compacted class name
      */
-    public static final String compactClassName( String str ) {
+    public static String compactClassName( final String str ) {
         return compactClassName(str, true);
     }
 
@@ -450,8 +476,8 @@ public abstract class Utility {
      * @param chopit Flag that determines whether chopping is executed or not
      * @return Compacted class name
      */
-    public static final String compactClassName( String str, String prefix, boolean chopit ) {
-        int len = prefix.length();
+    public static String compactClassName( String str, final String prefix, final boolean chopit ) {
+        final int len = prefix.length();
         str = str.replace('/', '.'); // Is `/' on all systems, even DOS
         if (chopit) {
             // If string starts with `prefix' and contains no further dots
@@ -464,7 +490,7 @@ public abstract class Utility {
 
 
     /**
-     * Shorten long class names, <em>java/lang/String</em> becomes 
+     * Shorten long class names, <em>java/lang/String</em> becomes
      * <em>java.lang.String</em>,
      * e.g.. If <em>chopit</em> is <em>true</em> the prefix <em>java.lang</em>
      * is also removed.
@@ -473,7 +499,7 @@ public abstract class Utility {
      * @param chopit Flag that determines whether chopping is executed or not
      * @return Compacted class name
      */
-    public static final String compactClassName( String str, boolean chopit ) {
+    public static String compactClassName( final String str, final boolean chopit ) {
         return compactClassName(str, "java.lang.", chopit);
     }
 
@@ -481,7 +507,7 @@ public abstract class Utility {
     /**
      * @return `flag' with bit `i' set to 1
      */
-    public static final int setBit( int flag, int i ) {
+    public static int setBit( final int flag, final int i ) {
         return flag | pow2(i);
     }
 
@@ -489,8 +515,8 @@ public abstract class Utility {
     /**
      * @return `flag' with bit `i' set to 0
      */
-    public static final int clearBit( int flag, int i ) {
-        int bit = pow2(i);
+    public static int clearBit( final int flag, final int i ) {
+        final int bit = pow2(i);
         return (flag & bit) == 0 ? flag : flag ^ bit;
     }
 
@@ -498,28 +524,30 @@ public abstract class Utility {
     /**
      * @return true, if bit `i' in `flag' is set
      */
-    public static final boolean isSet( int flag, int i ) {
+    public static boolean isSet( final int flag, final int i ) {
         return (flag & pow2(i)) != 0;
     }
 
 
     /**
-     * Converts string containing the method return and argument types 
+     * Converts string containing the method return and argument types
      * to a byte code method signature.
      *
      * @param  ret Return type of method
      * @param  argv Types of method arguments
      * @return Byte code representation of method signature
+     *
+     * @throws ClassFormatException if the signature is for Void
      */
-    public final static String methodTypeToSignature( String ret, String[] argv )
+    public static String methodTypeToSignature( final String ret, final String[] argv )
             throws ClassFormatException {
-        StringBuffer buf = new StringBuffer("(");
+        final StringBuilder buf = new StringBuilder("(");
         String str;
         if (argv != null) {
-            for (int i = 0; i < argv.length; i++) {
-                str = getSignature(argv[i]);
+            for (final String element : argv) {
+                str = getSignature(element);
                 if (str.endsWith("V")) {
-                    throw new ClassFormatException("Invalid type: " + argv[i]);
+                    throw new ClassFormatException("Invalid type: " + element);
                 }
                 buf.append(str);
             }
@@ -533,9 +561,9 @@ public abstract class Utility {
     /**
      * @param  signature    Method signature
      * @return Array of argument types
-     * @throws  ClassFormatException  
+     * @throws  ClassFormatException
      */
-    public static final String[] methodSignatureArgumentTypes( String signature )
+    public static String[] methodSignatureArgumentTypes( final String signature )
             throws ClassFormatException {
         return methodSignatureArgumentTypes(signature, true);
     }
@@ -545,11 +573,11 @@ public abstract class Utility {
      * @param  signature    Method signature
      * @param chopit Shorten class names ?
      * @return Array of argument types
-     * @throws  ClassFormatException  
+     * @throws  ClassFormatException
      */
-    public static final String[] methodSignatureArgumentTypes( String signature, boolean chopit )
+    public static String[] methodSignatureArgumentTypes( final String signature, final boolean chopit )
             throws ClassFormatException {
-        List vec = new ArrayList();
+        final List<String> vec = new ArrayList<>();
         int index;
         try { // Read all declarations between for `(' and `)'
             if (signature.charAt(0) != '(') {
@@ -561,20 +589,19 @@ public abstract class Utility {
                 //corrected concurrent private static field acess
                 index += unwrap(consumed_chars); // update position
             }
-        } catch (StringIndexOutOfBoundsException e) { // Should never occur
-            throw new ClassFormatException("Invalid method signature: " + signature);
+        } catch (final StringIndexOutOfBoundsException e) { // Should never occur
+            throw new ClassFormatException("Invalid method signature: " + signature, e);
         }
-        return (String[]) vec.toArray(new String[vec.size()]);
+        return vec.toArray(new String[vec.size()]);
     }
 
 
     /**
      * @param  signature    Method signature
      * @return return type of method
-     * @throws  ClassFormatException  
+     * @throws  ClassFormatException
      */
-    public static final String methodSignatureReturnType( String signature )
-            throws ClassFormatException {
+    public static String methodSignatureReturnType( final String signature ) throws ClassFormatException {
         return methodSignatureReturnType(signature, true);
     }
 
@@ -583,18 +610,17 @@ public abstract class Utility {
      * @param  signature    Method signature
      * @param chopit Shorten class names ?
      * @return return type of method
-     * @throws  ClassFormatException  
+     * @throws  ClassFormatException
      */
-    public static final String methodSignatureReturnType( String signature, boolean chopit )
-            throws ClassFormatException {
+    public static String methodSignatureReturnType( final String signature, final boolean chopit ) throws ClassFormatException {
         int index;
         String type;
         try {
             // Read return type after `)'
             index = signature.lastIndexOf(')') + 1;
             type = signatureToString(signature.substring(index), chopit);
-        } catch (StringIndexOutOfBoundsException e) { // Should never occur
-            throw new ClassFormatException("Invalid method signature: " + signature);
+        } catch (final StringIndexOutOfBoundsException e) { // Should never occur
+            throw new ClassFormatException("Invalid method signature: " + signature, e);
         }
         return type;
     }
@@ -608,60 +634,67 @@ public abstract class Utility {
      * @param access flags of method
      * @return Human readable signature
      */
-    public static final String methodSignatureToString( String signature, String name, String access ) {
+    public static String methodSignatureToString( final String signature, final String name, final String access ) {
         return methodSignatureToString(signature, name, access, true);
     }
 
 
-    public static final String methodSignatureToString( String signature, String name,
-            String access, boolean chopit ) {
+    public static String methodSignatureToString( final String signature, final String name, final String access, final boolean chopit ) {
         return methodSignatureToString(signature, name, access, chopit, null);
     }
 
 
     /**
-     * A return­type signature represents the return value from a method.
+     * A returntype signature represents the return value from a method.
      * It is a series of bytes in the following grammar:
      *
-     * <return_signature> ::= <field_type> | V
+     * <pre>
+     * &lt;return_signature&gt; ::= &lt;field_type&gt; | V
+     * </pre>
      *
      * The character V indicates that the method returns no value. Otherwise, the
      * signature indicates the type of the return value.
      * An argument signature represents an argument passed to a method:
      *
-     * <argument_signature> ::= <field_type>
+     * <pre>
+     * &lt;argument_signature&gt; ::= &lt;field_type&gt;
+     * </pre>
      *
      * A method signature represents the arguments that the method expects, and
      * the value that it returns.
-     * <method_signature> ::= (<arguments_signature>) <return_signature>
-     * <arguments_signature>::= <argument_signature>*
+     * <pre>
+     * &lt;method_signature&gt; ::= (&lt;arguments_signature&gt;) &lt;return_signature&gt;
+     * &lt;arguments_signature&gt;::= &lt;argument_signature&gt;*
+     * </pre>
      *
      * This method converts such a string into a Java type declaration like
-     * `void main(String[])' and throws a `ClassFormatException' when the parsed 
+     * `void main(String[])' and throws a `ClassFormatException' when the parsed
      * type is invalid.
      *
      * @param  signature    Method signature
      * @param  name         Method name
      * @param  access       Method access rights
+     * @param chopit
+     * @param vars
      * @return Java type declaration
-     * @throws  ClassFormatException  
+     * @throws  ClassFormatException
      */
-    public static final String methodSignatureToString( String signature, String name,
-            String access, boolean chopit, LocalVariableTable vars ) throws ClassFormatException {
-        StringBuffer buf = new StringBuffer("(");
+    public static String methodSignatureToString( final String signature, final String name,
+            final String access, final boolean chopit, final LocalVariableTable vars ) throws ClassFormatException {
+        final StringBuilder buf = new StringBuilder("(");
         String type;
         int index;
-        int var_index = (access.indexOf("static") >= 0) ? 0 : 1;
+        int var_index = access.contains("static") ? 0 : 1;
         try { // Read all declarations between for `(' and `)'
             if (signature.charAt(0) != '(') {
                 throw new ClassFormatException("Invalid method signature: " + signature);
             }
             index = 1; // current string position
             while (signature.charAt(index) != ')') {
-                String param_type = signatureToString(signature.substring(index), chopit);
+                final String param_type = signatureToString(signature.substring(index), chopit);
                 buf.append(param_type);
                 if (vars != null) {
-                    LocalVariable l = vars.getLocalVariable(var_index);
+                    final LocalVariable l = vars.getLocalVariable(var_index, 0);
                     if (l != null) {
                         buf.append(" ").append(l.getName());
                     }
@@ -680,8 +713,8 @@ public abstract class Utility {
             index++; // update position
             // Read return type after `)'
             type = signatureToString(signature.substring(index), chopit);
-        } catch (StringIndexOutOfBoundsException e) { // Should never occur
-            throw new ClassFormatException("Invalid method signature: " + signature);
+        } catch (final StringIndexOutOfBoundsException e) { // Should never occur
+            throw new ClassFormatException("Invalid method signature: " + signature, e);
         }
         if (buf.length() > 1) {
             buf.setLength(buf.length() - 2);
@@ -693,24 +726,25 @@ public abstract class Utility {
 
 
     // Guess what this does
-    private static final int pow2( int n ) {
+    private static int pow2( final int n ) {
         return 1 << n;
     }
 
 
     /**
-     * Replace all occurences of <em>old</em> in <em>str</em> with <em>new</em>.
+     * Replace all occurrences of <em>old</em> in <em>str</em> with <em>new</em>.
      *
      * @param str String to permute
      * @param old String to be replaced
      * @param new_ Replacement string
      * @return new String object
      */
-    public static final String replace( String str, String old, String new_ ) {
-        int index, old_index;
-        StringBuffer buf = new StringBuffer();
+    public static String replace( String str, final String old, final String new_ ) {
+        int index;
+        int old_index;
         try {
-            if ((index = str.indexOf(old)) != -1) { // `old' found in str
+            if (str.contains(old)) { // `old' found in str
+                final StringBuilder buf = new StringBuilder();
                 old_index = 0; // String start offset
                 // While we have something to replace
                 while ((index = str.indexOf(old, old_index)) != -1) {
@@ -721,7 +755,7 @@ public abstract class Utility {
                 buf.append(str.substring(old_index)); // append rest of string
                 str = buf.toString();
             }
-        } catch (StringIndexOutOfBoundsException e) { // Should not occur
+        } catch (final StringIndexOutOfBoundsException e) { // Should not occur
             System.err.println(e);
         }
         return str;
@@ -734,22 +768,22 @@ public abstract class Utility {
      * @param signature to convert
      * @return Human readable signature
      */
-    public static final String signatureToString( String signature ) {
+    public static String signatureToString( final String signature ) {
         return signatureToString(signature, true);
     }
 
 
     /**
-     * The field signature represents the value of an argument to a function or 
-     * the value of a variable. It is a series of bytes generated by the 
+     * The field signature represents the value of an argument to a function or
+     * the value of a variable. It is a series of bytes generated by the
      * following grammar:
      *
      * <PRE>
-     * <field_signature> ::= <field_type>
-     * <field_type>      ::= <base_type>|<object_type>|<array_type>
-     * <base_type>       ::= B|C|D|F|I|J|S|Z
-     * <object_type>     ::= L<fullclassname>;
-     * <array_type>      ::= [<field_type>
+     * &lt;field_signature&gt; ::= &lt;field_type&gt;
+     * &lt;field_type&gt;      ::= &lt;base_type&gt;|&lt;object_type&gt;|&lt;array_type&gt;
+     * &lt;base_type&gt;       ::= B|C|D|F|I|J|S|Z
+     * &lt;object_type&gt;     ::= L&lt;fullclassname&gt;;
+     * &lt;array_type&gt;      ::= [&lt;field_type&gt;
      *
      * The meaning of the base types is as follows:
      * B byte signed byte
@@ -758,14 +792,14 @@ public abstract class Utility {
      * F float single precision IEEE float
      * I int integer
      * J long long integer
-     * L<fullclassname>; ... an object of the given class
+     * L&lt;fullclassname&gt;; ... an object of the given class
      * S short signed short
      * Z boolean true or false
-     * [<field sig> ... array
+     * [&lt;field sig&gt; ... array
      * </PRE>
      *
      * This method converts this string into a Java type declaration such as
-     * `String[]' and throws a `ClassFormatException' when the parsed type is 
+     * `String[]' and throws a `ClassFormatException' when the parsed type is
      * invalid.
      *
      * @param  signature  Class signature
@@ -773,7 +807,7 @@ public abstract class Utility {
      * @return Java type declaration
      * @throws ClassFormatException
      */
-    public static final String signatureToString( String signature, boolean chopit ) {
+    public static String signatureToString( final String signature, final boolean chopit ) {
         //corrected concurrent private static field acess
         wrap(consumed_chars, 1); // This is the default, read just one char like `B'
         try {
@@ -790,14 +824,119 @@ public abstract class Utility {
                     return "int";
                 case 'J':
                     return "long";
-                case 'L': { // Full class name
-                    int index = signature.indexOf(';'); // Look for closing `;'
+                case 'T': { // TypeVariableSignature
+                    final int index = signature.indexOf(';'); // Look for closing `;'
                     if (index < 0) {
                         throw new ClassFormatException("Invalid signature: " + signature);
                     }
                     //corrected concurrent private static field acess
-                    wrap(consumed_chars, index + 1); // "Lblabla;" `L' and `;' are removed
+                    wrap(consumed_chars, index + 1); // "Tblabla;" `T' and `;' are removed
                     return compactClassName(signature.substring(1, index), chopit);
+                }
+                case 'L': { // Full class name
+                    // should this be a while loop? can there be more than
+                    // one generic clause?  (markro)
+                    int fromIndex = signature.indexOf('<'); // generic type?
+                    if (fromIndex < 0) {
+                        fromIndex = 0;
+                    } else {
+                        fromIndex = signature.indexOf('>', fromIndex);
+                        if (fromIndex < 0) {
+                            throw new ClassFormatException("Invalid signature: " + signature);
+                        }
+                    }
+                    final int index = signature.indexOf(';', fromIndex); // Look for closing `;'
+                    if (index < 0) {
+                        throw new ClassFormatException("Invalid signature: " + signature);
+                    }
+
+                    // check to see if there are any TypeArguments
+                    final int bracketIndex = signature.substring(0, index).indexOf('<');
+                    if (bracketIndex < 0) {
+                        // just a class identifier
+                        wrap(consumed_chars, index + 1); // "Lblabla;" `L' and `;' are removed
+                        return compactClassName(signature.substring(1, index), chopit);
+                    }
+                    // but make sure we are not looking past the end of the current item
+                    fromIndex = signature.indexOf(';');
+                    if (fromIndex < 0) {
+                        throw new ClassFormatException("Invalid signature: " + signature);
+                    }
+                    if (fromIndex < bracketIndex) {
+                        // just a class identifier
+                        wrap(consumed_chars, fromIndex + 1); // "Lblabla;" `L' and `;' are removed
+                        return compactClassName(signature.substring(1, fromIndex), chopit);
+                    }
+
+                    // we have TypeArguments; build up partial result
+                    // as we recurse for each TypeArgument
+                    final StringBuilder type = new StringBuilder(compactClassName(signature.substring(1, bracketIndex), chopit)).append("<");
+                    int consumed_chars = bracketIndex + 1; // Shadows global var
+
+                    // check for wildcards
+                    if (signature.charAt(consumed_chars) == '+') {
+                        type.append("? extends ");
+                        consumed_chars++;
+                    } else if (signature.charAt(consumed_chars) == '-') {
+                        type.append("? super ");
+                        consumed_chars++;
+                    }
+
+                    // get the first TypeArgument
+                    if (signature.charAt(consumed_chars) == '*') {
+                        type.append("?");
+                        consumed_chars++;
+                    } else {
+                        type.append(signatureToString(signature.substring(consumed_chars), chopit));
+                        // update our consumed count by the number of characters the for type argument
+                        consumed_chars = unwrap(Utility.consumed_chars) + consumed_chars;
+                        wrap(Utility.consumed_chars, consumed_chars);
+                    }
+
+                    // are there more TypeArguments?
+                    while (signature.charAt(consumed_chars) != '>') {
+                        type.append(", ");
+                        // check for wildcards
+                        if (signature.charAt(consumed_chars) == '+') {
+                            type.append("? extends ");
+                            consumed_chars++;
+                        } else if (signature.charAt(consumed_chars) == '-') {
+                            type.append("? super ");
+                            consumed_chars++;
+                        }
+                        if (signature.charAt(consumed_chars) == '*') {
+                            type.append("?");
+                            consumed_chars++;
+                        } else {
+                            type.append(signatureToString(signature.substring(consumed_chars), chopit));
+                            // update our consumed count by the number of characters the for type argument
+                            consumed_chars = unwrap(Utility.consumed_chars) + consumed_chars;
+                            wrap(Utility.consumed_chars, consumed_chars);
+                        }
+                    }
+
+                    // process the closing ">"
+                    consumed_chars++;
+                    type.append(">");
+
+                    if (signature.charAt(consumed_chars) == '.') {
+                        // we have a ClassTypeSignatureSuffix
+                        type.append(".");
+                        // convert SimpleClassTypeSignature to fake ClassTypeSignature
+                        // and then recurse to parse it
+                        type.append(signatureToString("L" + signature.substring(consumed_chars+1), chopit));
+                        // update our consumed count by the number of characters the for type argument
+                        // note that this count includes the "L" we added, but that is ok
+                        // as it accounts for the "." we didn't consume
+                        consumed_chars = unwrap(Utility.consumed_chars) + consumed_chars;
+                        wrap(Utility.consumed_chars, consumed_chars);
+                        return type.toString();
+                    }
+                    if (signature.charAt(consumed_chars) != ';') {
+                        throw new ClassFormatException("Invalid signature: " + signature);
+                    }
+                    wrap(Utility.consumed_chars, consumed_chars + 1); // remove final ";"
+                    return type.toString();
                 }
                 case 'S':
                     return "short";
@@ -805,10 +944,10 @@ public abstract class Utility {
                     return "boolean";
                 case '[': { // Array declaration
                     int n;
-                    StringBuffer brackets;
+                    StringBuilder brackets;
                     String type;
                     int consumed_chars; // Shadows global var
-                    brackets = new StringBuffer(); // Accumulate []'s
+                    brackets = new StringBuilder(); // Accumulate []'s
                     // Count opening brackets and look for optional size argument
                     for (n = 0; signature.charAt(n) == '['; n++) {
                         brackets.append("[]");
@@ -818,7 +957,7 @@ public abstract class Utility {
                     type = signatureToString(signature.substring(n), chopit);
                     //corrected concurrent private static field acess
                     //Utility.consumed_chars += consumed_chars; is replaced by:
-                    int _temp = unwrap(Utility.consumed_chars) + consumed_chars;
+                    final int _temp = unwrap(Utility.consumed_chars) + consumed_chars;
                     wrap(Utility.consumed_chars, _temp);
                     return type + brackets.toString();
                 }
@@ -827,8 +966,8 @@ public abstract class Utility {
                 default:
                     throw new ClassFormatException("Invalid signature: `" + signature + "'");
             }
-        } catch (StringIndexOutOfBoundsException e) { // Should never occur
-            throw new ClassFormatException("Invalid signature: " + e + ":" + signature);
+        } catch (final StringIndexOutOfBoundsException e) { // Should never occur
+            throw new ClassFormatException("Invalid signature: " + signature, e);
         }
     }
 
@@ -840,9 +979,10 @@ public abstract class Utility {
      * @return byte code signature
      */
     public static String getSignature( String type ) {
-        StringBuffer buf = new StringBuffer();
-        char[] chars = type.toCharArray();
-        boolean char_found = false, delim = false;
+        final StringBuilder buf = new StringBuilder();
+        final char[] chars = type.toCharArray();
+        boolean char_found = false;
+        boolean delim = false;
         int index = -1;
         loop: for (int i = 0; i < chars.length; i++) {
             switch (chars[i]) {
@@ -878,10 +1018,10 @@ public abstract class Utility {
             buf.append('[');
         }
         boolean found = false;
-        for (int i = Constants.T_BOOLEAN; (i <= Constants.T_VOID) && !found; i++) {
-            if (Constants.TYPE_NAMES[i].equals(type)) {
+        for (int i = Const.T_BOOLEAN; (i <= Const.T_VOID) && !found; i++) {
+            if (Const.getTypeName(i).equals(type)) {
                 found = true;
-                buf.append(Constants.SHORT_TYPE_NAMES[i]);
+                buf.append(Const.getShortTypeName(i));
             }
         }
         if (!found) {
@@ -891,12 +1031,12 @@ public abstract class Utility {
     }
 
 
-    private static int countBrackets( String brackets ) {
-        char[] chars = brackets.toCharArray();
+    private static int countBrackets( final String brackets ) {
+        final char[] chars = brackets.toCharArray();
         int count = 0;
         boolean open = false;
-        for (int i = 0; i < chars.length; i++) {
-            switch (chars[i]) {
+        for (final char c : chars) {
+            switch (c) {
                 case '[':
                     if (open) {
                         throw new RuntimeException("Illegally nested brackets:" + brackets);
@@ -912,6 +1052,7 @@ public abstract class Utility {
                     break;
                 default:
                     // Don't care
+                    break;
             }
         }
         if (open) {
@@ -926,9 +1067,11 @@ public abstract class Utility {
      *
      * @param  signature in format described above
      * @return type of method signature
-     * @see    Constants
+     * @see    Const
+     *
+     * @throws ClassFormatException if signature is not a method signature
      */
-    public static final byte typeOfMethodSignature( String signature ) throws ClassFormatException {
+    public static byte typeOfMethodSignature( final String signature ) throws ClassFormatException {
         int index;
         try {
             if (signature.charAt(0) != '(') {
@@ -936,8 +1079,8 @@ public abstract class Utility {
             }
             index = signature.lastIndexOf(')') + 1;
             return typeOfSignature(signature.substring(index));
-        } catch (StringIndexOutOfBoundsException e) {
-            throw new ClassFormatException("Invalid method signature: " + signature);
+        } catch (final StringIndexOutOfBoundsException e) {
+            throw new ClassFormatException("Invalid method signature: " + signature, e);
         }
     }
 
@@ -947,38 +1090,45 @@ public abstract class Utility {
      *
      * @param  signature in format described above
      * @return type of signature
-     * @see    Constants
+     * @see    Const
+     *
+     * @throws ClassFormatException if signature isn't a known type
      */
-    public static final byte typeOfSignature( String signature ) throws ClassFormatException {
+    public static byte typeOfSignature( final String signature ) throws ClassFormatException {
         try {
             switch (signature.charAt(0)) {
                 case 'B':
-                    return Constants.T_BYTE;
+                    return Const.T_BYTE;
                 case 'C':
-                    return Constants.T_CHAR;
+                    return Const.T_CHAR;
                 case 'D':
-                    return Constants.T_DOUBLE;
+                    return Const.T_DOUBLE;
                 case 'F':
-                    return Constants.T_FLOAT;
+                    return Const.T_FLOAT;
                 case 'I':
-                    return Constants.T_INT;
+                    return Const.T_INT;
                 case 'J':
-                    return Constants.T_LONG;
+                    return Const.T_LONG;
                 case 'L':
-                    return Constants.T_REFERENCE;
+                case 'T':
+                    return Const.T_REFERENCE;
                 case '[':
-                    return Constants.T_ARRAY;
+                    return Const.T_ARRAY;
                 case 'V':
-                    return Constants.T_VOID;
+                    return Const.T_VOID;
                 case 'Z':
-                    return Constants.T_BOOLEAN;
+                    return Const.T_BOOLEAN;
                 case 'S':
-                    return Constants.T_SHORT;
+                    return Const.T_SHORT;
+                case '!':
+                case '+':
+                case '*':
+                    return typeOfSignature(signature.substring(1));
                 default:
                     throw new ClassFormatException("Invalid method signature: " + signature);
             }
-        } catch (StringIndexOutOfBoundsException e) {
-            throw new ClassFormatException("Invalid method signature: " + signature);
+        } catch (final StringIndexOutOfBoundsException e) {
+            throw new ClassFormatException("Invalid method signature: " + signature, e);
         }
     }
 
@@ -987,8 +1137,8 @@ public abstract class Utility {
      */
     public static short searchOpcode( String name ) {
         name = name.toLowerCase(Locale.ENGLISH);
-        for (short i = 0; i < Constants.OPCODE_NAMES.length; i++) {
-            if (Constants.OPCODE_NAMES[i].equals(name)) {
+        for (short i = 0; i < Const.OPCODE_NAMES_LENGTH; i++) {
+            if (Const.getOpcodeName(i).equals(name)) {
                 return i;
             }
         }
@@ -1000,20 +1150,22 @@ public abstract class Utility {
      * Convert (signed) byte to (unsigned) short value, i.e., all negative
      * values become positive.
      */
-    private static final short byteToShort( byte b ) {
+    private static short byteToShort( final byte b ) {
         return (b < 0) ? (short) (256 + b) : (short) b;
     }
 
 
-    /** Convert bytes into hexidecimal string
+    /** Convert bytes into hexadecimal string
      *
-     * @return bytes as hexidecimal string, e.g. 00 FA 12 ...
+     * @param bytes an array of bytes to convert to hexadecimal
+     *
+     * @return bytes as hexadecimal string, e.g. 00 fa 12 ...
      */
-    public static final String toHexString( byte[] bytes ) {
-        StringBuffer buf = new StringBuffer();
+    public static String toHexString( final byte[] bytes ) {
+        final StringBuilder buf = new StringBuilder();
         for (int i = 0; i < bytes.length; i++) {
-            short b = byteToShort(bytes[i]);
-            String hex = Integer.toString(b, 0x10);
+            final short b = byteToShort(bytes[i]);
+            final String hex = Integer.toHexString(b);
             if (b < 0x10) {
                 buf.append('0');
             }
@@ -1036,7 +1188,7 @@ public abstract class Utility {
      * @param fill fill character
      * @return formatted int
      */
-    public static final String format( int i, int length, boolean left_justify, char fill ) {
+    public static String format( final int i, final int length, final boolean left_justify, final char fill ) {
         return fillup(Integer.toString(i), length, left_justify, fill);
     }
 
@@ -1050,9 +1202,9 @@ public abstract class Utility {
      * @param fill fill character
      * @return formatted string
      */
-    public static final String fillup( String str, int length, boolean left_justify, char fill ) {
-        int len = length - str.length();
-        char[] buf = new char[(len < 0) ? 0 : len];
+    public static String fillup( final String str, final int length, final boolean left_justify, final char fill ) {
+        final int len = length - str.length();
+        final char[] buf = new char[(len < 0) ? 0 : len];
         for (int j = 0; j < buf.length; j++) {
             buf[j] = fill;
         }
@@ -1063,7 +1215,7 @@ public abstract class Utility {
     }
 
 
-    static final boolean equals( byte[] a, byte[] b ) {
+    static boolean equals( final byte[] a, final byte[] b ) {
         int size;
         if ((size = a.length) != b.length) {
             return false;
@@ -1077,38 +1229,37 @@ public abstract class Utility {
     }
 
 
-    public static final void printArray( PrintStream out, Object[] obj ) {
+    public static void printArray( final PrintStream out, final Object[] obj ) {
         out.println(printArray(obj, true));
     }
 
 
-    public static final void printArray( PrintWriter out, Object[] obj ) {
+    public static void printArray( final PrintWriter out, final Object[] obj ) {
         out.println(printArray(obj, true));
     }
 
 
-    public static final String printArray( Object[] obj ) {
+    public static String printArray( final Object[] obj ) {
         return printArray(obj, true);
     }
 
 
-    public static final String printArray( Object[] obj, boolean braces ) {
+    public static String printArray( final Object[] obj, final boolean braces ) {
         return printArray(obj, braces, false);
     }
 
 
-    public static final String printArray( Object[] obj, boolean braces, boolean quote ) {
+    public static String printArray( final Object[] obj, final boolean braces, final boolean quote ) {
         if (obj == null) {
             return null;
         }
-        StringBuffer buf = new StringBuffer();
+        final StringBuilder buf = new StringBuilder();
         if (braces) {
             buf.append('{');
         }
         for (int i = 0; i < obj.length; i++) {
             if (obj[i] != null) {
-                buf.append((quote ? "\"" : "")).append(obj[i].toString()).append(
-                        (quote ? "\"" : ""));
+                buf.append(quote ? "\"" : "").append(obj[i]).append(quote ? "\"" : "");
             } else {
                 buf.append("null");
             }
@@ -1123,70 +1274,77 @@ public abstract class Utility {
     }
 
 
-    /** @return true, if character is one of (a, ... z, A, ... Z, 0, ... 9, _)
+    /**
+     * @param ch the character to test if it's part of an identifier
+     *
+     * @return true, if character is one of (a, ... z, A, ... Z, 0, ... 9, _)
      */
-    public static boolean isJavaIdentifierPart( char ch ) {
+    public static boolean isJavaIdentifierPart( final char ch ) {
         return ((ch >= 'a') && (ch <= 'z')) || ((ch >= 'A') && (ch <= 'Z'))
                 || ((ch >= '0') && (ch <= '9')) || (ch == '_');
     }
 
 
-    /** Encode byte array it into Java identifier string, i.e., a string
+    /**
+     * Encode byte array it into Java identifier string, i.e., a string
      * that only contains the following characters: (a, ... z, A, ... Z,
      * 0, ... 9, _, $).  The encoding algorithm itself is not too
      * clever: if the current byte's ASCII value already is a valid Java
      * identifier part, leave it as it is. Otherwise it writes the
-     * escape character($) followed by <p><ul><li> the ASCII value as a
-     * hexadecimal string, if the value is not in the range
-     * 200..247</li> <li>a Java identifier char not used in a lowercase
-     * hexadecimal string, if the value is in the range
-     * 200..247</li><ul></p>
+     * escape character($) followed by:
+     *
+     * <ul>
+     *   <li> the ASCII value as a hexadecimal string, if the value is not in the range 200..247</li>
+     *   <li>a Java identifier char not used in a lowercase hexadecimal string, if the value is in the range 200..247</li>
+     * </ul>
      *
      * <p>This operation inflates the original byte array by roughly 40-50%</p>
      *
      * @param bytes the byte array to convert
      * @param compress use gzip to minimize string
+     *
+     * @throws IOException if there's a gzip exception
      */
-    public static String encode( byte[] bytes, boolean compress ) throws IOException {
+    public static String encode(byte[] bytes, final boolean compress) throws IOException {
         if (compress) {
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            GZIPOutputStream gos = new GZIPOutputStream(baos);
-            gos.write(bytes, 0, bytes.length);
-            gos.close();
-            baos.close();
-            bytes = baos.toByteArray();
+            try (ByteArrayOutputStream baos = new ByteArrayOutputStream();
+                    GZIPOutputStream gos = new GZIPOutputStream(baos)) {
+                gos.write(bytes, 0, bytes.length);
+                bytes = baos.toByteArray();
+            }
         }
-        CharArrayWriter caw = new CharArrayWriter();
-        JavaWriter jw = new JavaWriter(caw);
-        for (int i = 0; i < bytes.length; i++) {
-            int in = bytes[i] & 0x000000ff; // Normalize to unsigned
-            jw.write(in);
+        final CharArrayWriter caw = new CharArrayWriter();
+        try (JavaWriter jw = new JavaWriter(caw)) {
+            for (final byte b : bytes) {
+                final int in = b & 0x000000ff; // Normalize to unsigned
+                jw.write(in);
+            }
         }
         return caw.toString();
     }
 
 
-    /** Decode a string back to a byte array.
+    /**
+     * Decode a string back to a byte array.
      *
      * @param s the string to convert
      * @param uncompress use gzip to uncompress the stream of bytes
+     *
+     * @throws IOException if there's a gzip exception
      */
-    public static byte[] decode( String s, boolean uncompress ) throws IOException {
-        char[] chars = s.toCharArray();
-        CharArrayReader car = new CharArrayReader(chars);
-        JavaReader jr = new JavaReader(car);
-        ByteArrayOutputStream bos = new ByteArrayOutputStream();
-        int ch;
-        while ((ch = jr.read()) >= 0) {
-            bos.write(ch);
+    public static byte[] decode(final String s, final boolean uncompress) throws IOException {
+        byte[] bytes;
+        try (JavaReader jr = new JavaReader(new CharArrayReader(s.toCharArray()));
+                ByteArrayOutputStream bos = new ByteArrayOutputStream()) {
+            int ch;
+            while ((ch = jr.read()) >= 0) {
+                bos.write(ch);
+            }
+            bytes = bos.toByteArray();
         }
-        bos.close();
-        car.close();
-        jr.close();
-        byte[] bytes = bos.toByteArray();
         if (uncompress) {
-            GZIPInputStream gis = new GZIPInputStream(new ByteArrayInputStream(bytes));
-            byte[] tmp = new byte[bytes.length * 3]; // Rough estimate
+            final GZIPInputStream gis = new GZIPInputStream(new ByteArrayInputStream(bytes));
+            final byte[] tmp = new byte[bytes.length * 3]; // Rough estimate
             int count = 0;
             int b;
             while ((b = gis.read()) >= 0) {
@@ -1200,8 +1358,8 @@ public abstract class Utility {
 
     // A-Z, g-z, _, $
     private static final int FREE_CHARS = 48;
-    static int[] CHAR_MAP = new int[FREE_CHARS];
-    static int[] MAP_CHAR = new int[256]; // Reverse map
+    private static int[] CHAR_MAP = new int[FREE_CHARS];
+    private static int[] MAP_CHAR = new int[256]; // Reverse map
     private static final char ESCAPE_CHAR = '$';
     static {
         int j = 0;
@@ -1222,41 +1380,44 @@ public abstract class Utility {
         MAP_CHAR['_'] = j;
     }
 
-    /** Decode characters into bytes.
+    /**
+     * Decode characters into bytes.
      * Used by <a href="Utility.html#decode(java.lang.String, boolean)">decode()</a>
      */
     private static class JavaReader extends FilterReader {
 
-        public JavaReader(Reader in) {
+        public JavaReader(final Reader in) {
             super(in);
         }
 
 
+        @Override
         public int read() throws IOException {
-            int b = in.read();
+            final int b = in.read();
             if (b != ESCAPE_CHAR) {
                 return b;
             }
-            int i = in.read();
+            final int i = in.read();
             if (i < 0) {
                 return -1;
             }
             if (((i >= '0') && (i <= '9')) || ((i >= 'a') && (i <= 'f'))) { // Normal escape
-                int j = in.read();
+                final int j = in.read();
                 if (j < 0) {
                     return -1;
                 }
-                char[] tmp = {
+                final char[] tmp = {
                         (char) i, (char) j
                 };
-                int s = Integer.parseInt(new String(tmp), 16);
+                final int s = Integer.parseInt(new String(tmp), 16);
                 return s;
             }
             return MAP_CHAR[i];
         }
 
 
-        public int read( char[] cbuf, int off, int len ) throws IOException {
+        @Override
+        public int read( final char[] cbuf, final int off, final int len ) throws IOException {
             for (int i = 0; i < len; i++) {
                 cbuf[off + i] = (char) read();
             }
@@ -1264,17 +1425,19 @@ public abstract class Utility {
         }
     }
 
-    /** Encode bytes into valid java identifier characters.
+    /**
+     * Encode bytes into valid java identifier characters.
      * Used by <a href="Utility.html#encode(byte[], boolean)">encode()</a>
      */
     private static class JavaWriter extends FilterWriter {
 
-        public JavaWriter(Writer out) {
+        public JavaWriter(final Writer out) {
             super(out);
         }
 
 
-        public void write( int b ) throws IOException {
+        @Override
+        public void write( final int b ) throws IOException {
             if (isJavaIdentifierPart((char) b) && (b != ESCAPE_CHAR)) {
                 out.write(b);
             } else {
@@ -1283,7 +1446,7 @@ public abstract class Utility {
                 if (b >= 0 && b < FREE_CHARS) {
                     out.write(CHAR_MAP[b]);
                 } else { // Normal escape
-                    char[] tmp = Integer.toHexString(b).toCharArray();
+                    final char[] tmp = Integer.toHexString(b).toCharArray();
                     if (tmp.length == 1) {
                         out.write('0');
                         out.write(tmp[0]);
@@ -1296,14 +1459,16 @@ public abstract class Utility {
         }
 
 
-        public void write( char[] cbuf, int off, int len ) throws IOException {
+        @Override
+        public void write( final char[] cbuf, final int off, final int len ) throws IOException {
             for (int i = 0; i < len; i++) {
                 write(cbuf[off + i]);
             }
         }
 
 
-        public void write( String str, int off, int len ) throws IOException {
+        @Override
+        public void write( final String str, final int off, final int len ) throws IOException {
             write(str.toCharArray(), off, len);
         }
     }
@@ -1312,11 +1477,11 @@ public abstract class Utility {
     /**
      * Escape all occurences of newline chars '\n', quotes \", etc.
      */
-    public static final String convertString( String label ) {
-        char[] ch = label.toCharArray();
-        StringBuffer buf = new StringBuffer();
-        for (int i = 0; i < ch.length; i++) {
-            switch (ch[i]) {
+    public static String convertString( final String label ) {
+        final char[] ch = label.toCharArray();
+        final StringBuilder buf = new StringBuilder();
+        for (final char element : ch) {
+            switch (element) {
                 case '\n':
                     buf.append("\\n");
                     break;
@@ -1333,10 +1498,11 @@ public abstract class Utility {
                     buf.append("\\\\");
                     break;
                 default:
-                    buf.append(ch[i]);
+                    buf.append(element);
                     break;
             }
         }
         return buf.toString();
     }
+
 }
