@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,55 +12,55 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
-/** 
+/**
  * LDC2_W - Push long or double from constant pool
  *
  * <PRE>Stack: ... -&gt; ..., item.word1, item.word2</PRE>
  *
- * @version $Id: LDC2_W.java 386056 2006-03-15 11:31:56Z tcurdt $
- * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
+ * @version $Id: LDC2_W.java 1812166 2017-10-13 23:48:11Z ggregory $
  */
-public class LDC2_W extends CPInstruction implements PushInstruction, TypedInstruction {
+public class LDC2_W extends CPInstruction implements PushInstruction {
 
     /**
-     * Empty constructor needed for the Class.newInstance() statement in
-     * Instruction.readInstruction(). Not to be used otherwise.
+     * Empty constructor needed for Instruction.readInstruction.
+     * Not to be used otherwise.
      */
     LDC2_W() {
     }
 
 
-    public LDC2_W(int index) {
-        super(org.apache.bcel.Constants.LDC2_W, index);
+    public LDC2_W(final int index) {
+        super(org.apache.bcel.Const.LDC2_W, index);
     }
 
 
-    public Type getType( ConstantPoolGen cpg ) {
-        switch (cpg.getConstantPool().getConstant(index).getTag()) {
-            case org.apache.bcel.Constants.CONSTANT_Long:
+    @Override
+    public Type getType( final ConstantPoolGen cpg ) {
+        switch (cpg.getConstantPool().getConstant(super.getIndex()).getTag()) {
+            case org.apache.bcel.Const.CONSTANT_Long:
                 return Type.LONG;
-            case org.apache.bcel.Constants.CONSTANT_Double:
+            case org.apache.bcel.Const.CONSTANT_Double:
                 return Type.DOUBLE;
             default: // Never reached
-                throw new RuntimeException("Unknown constant type " + opcode);
+                throw new RuntimeException("Unknown constant type " + super.getOpcode());
         }
     }
 
 
-    public Number getValue( ConstantPoolGen cpg ) {
-        org.apache.bcel.classfile.Constant c = cpg.getConstantPool().getConstant(index);
+    public Number getValue( final ConstantPoolGen cpg ) {
+        final org.apache.bcel.classfile.Constant c = cpg.getConstantPool().getConstant(super.getIndex());
         switch (c.getTag()) {
-            case org.apache.bcel.Constants.CONSTANT_Long:
-                return new Long(((org.apache.bcel.classfile.ConstantLong) c).getBytes());
-            case org.apache.bcel.Constants.CONSTANT_Double:
+            case org.apache.bcel.Const.CONSTANT_Long:
+                return Long.valueOf(((org.apache.bcel.classfile.ConstantLong) c).getBytes());
+            case org.apache.bcel.Const.CONSTANT_Double:
                 return new Double(((org.apache.bcel.classfile.ConstantDouble) c).getBytes());
             default: // Never reached
-                throw new RuntimeException("Unknown or invalid constant type at " + index);
+                throw new RuntimeException("Unknown or invalid constant type at " + super.getIndex());
         }
     }
 
@@ -72,7 +73,8 @@ public class LDC2_W extends CPInstruction implements PushInstruction, TypedInstr
      *
      * @param v Visitor object
      */
-    public void accept( Visitor v ) {
+    @Override
+    public void accept( final Visitor v ) {
         v.visitStackProducer(this);
         v.visitPushInstruction(this);
         v.visitTypedInstruction(this);
