@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,13 +12,14 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
 import java.io.DataOutputStream;
 import java.io.IOException;
+
 import org.apache.bcel.util.ByteSequence;
 
 /**
@@ -25,8 +27,7 @@ import org.apache.bcel.util.ByteSequence;
  *
  * <PRE>Stack: ... -&gt; ..., value</PRE>
  *
- * @version $Id: SIPUSH.java 386056 2006-03-15 11:31:56Z tcurdt $
- * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
+ * @version $Id: SIPUSH.java 1812166 2017-10-13 23:48:11Z ggregory $
  */
 public class SIPUSH extends Instruction implements ConstantPushInstruction {
 
@@ -34,15 +35,15 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
 
 
     /**
-     * Empty constructor needed for the Class.newInstance() statement in
-     * Instruction.readInstruction(). Not to be used otherwise.
+     * Empty constructor needed for Instruction.readInstruction.
+     * Not to be used otherwise.
      */
     SIPUSH() {
     }
 
 
-    public SIPUSH(short b) {
-        super(org.apache.bcel.Constants.SIPUSH, (short) 3);
+    public SIPUSH(final short b) {
+        super(org.apache.bcel.Const.SIPUSH, (short) 3);
         this.b = b;
     }
 
@@ -50,7 +51,8 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Dump instruction as short code to stream out.
      */
-    public void dump( DataOutputStream out ) throws IOException {
+    @Override
+    public void dump( final DataOutputStream out ) throws IOException {
         super.dump(out);
         out.writeShort(b);
     }
@@ -59,7 +61,8 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * @return mnemonic for instruction
      */
-    public String toString( boolean verbose ) {
+    @Override
+    public String toString( final boolean verbose ) {
         return super.toString(verbose) + " " + b;
     }
 
@@ -67,20 +70,23 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Read needed data (e.g. index) from file.
      */
-    protected void initFromFile( ByteSequence bytes, boolean wide ) throws IOException {
-        length = 3;
+    @Override
+    protected void initFromFile( final ByteSequence bytes, final boolean wide ) throws IOException {
+        super.setLength(3);
         b = bytes.readShort();
     }
 
 
+    @Override
     public Number getValue() {
-        return new Integer(b);
+        return Integer.valueOf(b);
     }
 
 
     /** @return Type.SHORT
      */
-    public Type getType( ConstantPoolGen cp ) {
+    @Override
+    public Type getType( final ConstantPoolGen cp ) {
         return Type.SHORT;
     }
 
@@ -93,7 +99,8 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
      *
      * @param v Visitor object
      */
-    public void accept( Visitor v ) {
+    @Override
+    public void accept( final Visitor v ) {
         v.visitPushInstruction(this);
         v.visitStackProducer(this);
         v.visitTypedInstruction(this);
